crates/solidity-v2/testing/snapshots/diagnostics_output/type_system/storage_layout_base_slot/out_of_range_expressions/generated/solc/0.8.29-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 4

[TypeError 6753] Error: The base slot of the storage layout evaluates to 2**256, which is outside the range of type uint256.
   ╭─[input.sol:6:22]
   │
 6 │ contract A layout at 0xFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF + 1 {}
   │                      ───────────────────────────────────┬──────────────────────────────────  
   │                                                         ╰──────────────────────────────────── Error occurred here.
───╯

[TypeError 6753] Error: The base slot of the storage layout evaluates to 2**256, which is outside the range of type uint256.
   ╭─[input.sol:7:22]
   │
 7 │ contract B layout at 2 ** 256 {}
   │                      ────┬───  
   │                          ╰───── Error occurred here.
───╯

[TypeError 6753] Error: The base slot of the storage layout evaluates to -1, which is outside the range of type uint256.
   ╭─[input.sol:8:22]
   │
 8 │ contract C layout at 0 - 1 {}
   │                      ──┬──  
   │                        ╰──── Error occurred here.
───╯

[TypeError 6753] Error: The base slot of the storage layout evaluates to -65280, which is outside the range of type uint256.
   ╭─[input.sol:9:22]
   │
 9 │ contract D layout at 2 ** 8 - 2 ** 16 {}
   │                      ────────┬───────  
   │                              ╰───────── Error occurred here.
───╯
